# olympics-rs

./: Cargo.toml  README.md  schema.graphql
.github/workflows/: schemaCheck.yml
src/: main.rs  resolvers.rs  schema.rs
