[package]
name = "olympics-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {version = "7.0.5", features=["chrono"]}
async-graphql-poem = "7.0.5"
chrono = "0.4.38"
poem = "3.0.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
